--- a/.github/workflows/sync-to-dev.yml
+++ b/.github/workflows/sync-to-dev.yml
@@ -2,7 +2,8 @@ name: sync-to-dev
 on:
   push:
     branches:
-      - feature
+      - main
+      - release-1.3
 jobs:
   push-test:
     runs-on: ubuntu-latest
