--- a/.github/workflows/sync-to-dev.yml
+++ b/.github/workflows/sync-to-dev.yml
@@ -30,5 +30,5 @@ jobs:
           # git rebase --onto $BRANCH_NAME dev
           git rebase $BRANCH_NAME
           echo "3"
-          git push
+          git push origin dev
           echo "4"
