--- a/.github/workflows/sync-to-dev.yml
+++ b/.github/workflows/sync-to-dev.yml
@@ -23,12 +23,9 @@ jobs:
           git checkout $BRANCH_NAME
           echo "0"
           git rebase --onto dev $COMMIT_SHA
-          # git rebase origin/main
           echo "1"
-          echo "2"
           git checkout dev
-          # git rebase --onto $BRANCH_NAME dev
-          git rebase $BRANCH_NAME
-          echo "3"
+          git rebase --onto $BRANCH_NAME dev
+          echo "2"
           git push origin dev
-          echo "4"
+          echo "3"
